--- a/carapp/templates/carapp/base.html
+++ b/carapp/templates/carapp/base.html
@@ -12,16 +12,17 @@
             <h1>Welcome to the Car Site</h1>
             <nav>
                 <a href="{% url 'carapp:homepage' %}">Home</a> |
-                <a href="{% url 'carapp:aboutus' %}">About Us</a>
-                <li><a href="{% url 'carapp:vehicles' %}">Vehicles</a></li>
+                <a href="{% url 'carapp:aboutus' %}">About Us</a> | 
+                <a href="{% url 'carapp:vehicles' %}">Vehicles</a>
             </nav>
             <hr>
 
+<!-----            
             <form action="{% url 'carapp:search' %}" method="get" style="display:inline;">
                 <input type="text" name="q" placeholder="Search Car Types">
                 <button type="submit">Search</button>
             </form>            
-
+------>
         </header>
         
         {% block content %}{% endblock %}
