--- a/carapp/templates/carapp/homepage.html
+++ b/carapp/templates/carapp/homepage.html
@@ -1,16 +1,29 @@
 {% extends "carapp/base.html" %}
+{% load static %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Home - Car Site{% endblock %}
 
 {% block content %}
-    {% if cartype_list %}
-        <h2>Types of Cars</h2>
-        <ol>
-            {% for cartype in cartype_list %}
-                <li><a href="{% url 'carapp:cardetail' cartype.id %}">{{ cartype.name }}</a></li>
-            {% endfor %}
-        </ol>
-    {% else %}
-        <strong>No car types are available!</strong>
-    {% endif %}
+<div class="container">
+
+    <nav class="top-nav">
+        <a href="{% url 'carapp:aboutus' %}">About Us</a>
+        <a href="{% url 'carapp:search' %}">Search</a>
+        <a href="{% url 'carapp:vehicles' %}">Vehicles</a>
+        <a href="{% url 'carapp:teamdetail' %}">Team Detail</a>
+    </nav>
+
+    <h2>Welcome to Car Site</h2>
+    
+    <ul class="car-list">
+        {% for cartype in cartype_list %}
+            <li>
+                <a href="{% url 'carapp:cardetail' cartype.id %}">
+                    <img src="{% static 'carapp/images/' %}{{ cartype.name }}.jpg" alt="{{ cartype.name }}" class="car-image">
+                    <span>{{ cartype.name }}</span>
+                </a>
+            </li>
+        {% endfor %}
+    </ul>
+</div>
 {% endblock %}
