--- a/carapp/templates/carapp/search.html
+++ b/carapp/templates/carapp/search.html
@@ -1,17 +1,21 @@
 {% extends "carapp/base.html" %}
 
-{% block title %}Search Results{% endblock %}
-
 {% block content %}
-    <h2>Search Results for "{{ query }}"</h2>
-    {% if results %}
-        <ul>
-            {% for result in results %}
-                <li><a href="{% url 'carapp:cardetail' result.id %}">{{ result.name }}</a></li>
+<div class="container">
+    <h2>Search for a Vehicle</h2>
+    <form method="POST">
+        {% csrf_token %}
+        <label for="vehicle">Select Vehicle:</label>
+        <select name="vehicle" id="vehicle">
+            {% for vehicle in vehicles %}
+                <option value="{{ vehicle.id }}">{{ vehicle.name }}</option>
             {% endfor %}
-        </ul>
-    {% else %}
-        <p>No results found.</p>
+        </select>
+        <button type="submit">Filter</button>
+    </form>
+
+    {% if selected_vehicle %}
+        <p>Price of {{ selected_vehicle.name }}: ${{ price }}</p>
     {% endif %}
-    <p><a class="back-link" href="{% url 'carapp:homepage' %}">Back to Home</a></p>
+</div>
 {% endblock %}
