--- a/carapp/templates/carapp/vehicles.html
+++ b/carapp/templates/carapp/vehicles.html
@@ -1,14 +1,13 @@
-<!-- carapp/templates/carapp/vehicles.html -->
-
 {% extends "carapp/base.html" %}
 
 {% block content %}
-<h2>Available Vehicles</h2>
-<ul>
-    {% for vehicle in vehicles %}
-        <li>{{ vehicle.name }}</li>
-    {% endfor %}
-</ul>
-
-<p><a href="{% url 'carapp:orderhere' %}">Place a New Order</a></p>
+<div class="container">
+    <h3><a href="{% url 'carapp:orderhere' %}">Place a New Order</a></h3>
+    <h2>Available Vehicles</h2>
+    <ul class="car-list">
+        {% for vehicle in vehicles %}
+            <li>{{ vehicle.name }}</li>
+        {% endfor %}
+    </ul>
+</div>
 {% endblock %}
