--- a/carapp/templates/carapp/list_of_orders.html
+++ b/carapp/templates/carapp/list_of_orders.html
@@ -13,7 +13,7 @@
                 <li>
                     <strong>Vehicle:</strong> {{ order.vehicle.name }}<br>
                     <strong>Quantity:</strong> {{ order.vehicles_ordered }}<br>
-                    <strong>Date:</strong> {{ order.created_at }}<br>
+                    <strong>Date:</strong> {{ order.date  }}<br>
                     <br>
                 </li>
             {% endfor %}
